@@ -20,7 +20,7 @@ import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
-import java.util.Collections;
+import java.util.List;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
@@ -54,12 +54,12 @@ class ImmutableKeySetTest {
 
     @Test
     void testRemoveAll() {
-        assertThrows(UnsupportedOperationException.class, () -> set.removeAll(Collections.emptyList()));
+        assertThrows(UnsupportedOperationException.class, () -> set.removeAll(List.of()));
     }
 
     @Test
     void testRetainAll() {
-        assertThrows(UnsupportedOperationException.class, () -> set.retainAll(Collections.emptyList()));
+        assertThrows(UnsupportedOperationException.class, () -> set.retainAll(List.of()));
     }
 
     @Test
